--- a/src/styles/CustomNavbar.css
+++ b/src/styles/CustomNavbar.css
@@ -193,6 +193,7 @@
     gap: 5px;
     z-index: 1001;
     animation: spin 0.5s forwards;
+    padding-right: 20px;
   }
 
   .hamburger span {
@@ -245,11 +246,11 @@
   }
 
   .navbar-links li {
-    padding: 30px 0;
+    padding: 35px 0;
   }
 
   .navbar-links a {
-    font-size: 20px;
+    font-size: 18px;
     color: #ffffff; /* White color for text */
     font-weight: 400;
     text-decoration: none;
@@ -263,15 +264,19 @@
   .social-icons {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    align-items: center;
+    gap: 10px;
+    margin-top: 30px;
+    width: 100%;
+    margin-left: -10px;
   }
 
-  .social-logo {
-    width: 30px;
+  img.social-logo {
+    width: 35px;
     height: auto;
     cursor: pointer;
   }
+
 
   .social-logo:hover {
     transform: scale(1.1); /* Slight zoom effect */
